test/interpreter/error/err_02_mod_zero.pl0
program modzero; 
var x; 
begin 
    x := 1 mod 0; 
end